# phase-space-explorer

./: .gitignore  Phase_Space_Explorer_Logistic.ipynb  README.md  pyproject.toml  requirements.txt
notebooks/: phase_space_explorer_demo.ipynb
notebooks/.ipynb_checkpoints/: phase_space_explorer_demo-checkpoint.ipynb
phase_space_explorer/: __init__.py
phase_space_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phase_space_explorer/core/: __init__.py  analysis.py  jacobian.py  simulate.py  stability.py
phase_space_explorer/plotting/: __init__.py  plot_1d.py  plot_2d.py  plot_3d.py
phase_space_explorer/systems/: __init__.py  base.py  logistic.py  lorenz.py  oscillator.py  predator_prey.py
phase_space_explorer/ui/: __init__.py  notebook_controls.py
